--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
 
 
     <!-- Modal Structure -->
-    <div class="backdrop">
+    <div class="backdrop" id="modal-backdrop">
         <div class="modal">
-            <button class="close-button" type="button">
+            <button class="close-button" id="modal-close-button" type="button">
                 <svg class="close-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
@@ -360,41 +360,43 @@
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <div class="form-group">
-                    <label for="user-name">Name</label>
-                    <div class="input-wrapper">
-                        <input type="text" id="user-name" name="user-name" class="form-input" placeholder="Name"
-                            required>
+                    <label class="modal-name" for="user-name">
+                        Name
+                        <input type="text" id="user-name" name="user-name" class="form-input" placeholder="Name" required>
                         <svg class="icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
-                    </div>
+                    </label>
                 </div>
                 <div class="form-group">
-                    <label for="phone">Phone</label>
-                    <div class="input-wrapper">
+                    <label class="modal-phone" for="phone">
+                        Phone
                         <input type="tel" id="phone" name="phone" class="form-input" placeholder="Phone" required>
                         <svg class="icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
-                    </div>
+                    </label>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <div class="input-wrapper">
-                        <input type="e-mail" id="e-mail" name="e-mail" class="form-input" placeholder="E-mail" required>
+                    <label class="modal-mail" for="email">
+                        Email
+                        <input type="email" id="e-mail" name="e-mail" class="form-input" placeholder="E-mail" required>
                         <svg class="icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
-                    </div>
+                    </label>
                 </div>
                 <div class="form-group">
-                    <label for="user-comment">Comment</label>
-                    <textarea id="user-comment" name="user-comment" class="textarea-input" placeholder="Text input"
-                        required></textarea>
+                    <label class="modal-user" for="user-comment">
+                        Comment
+                        <textarea id="user-comment" name="user-comment" class="textarea-input" placeholder="Text input"
+                            required></textarea>
+                    </label>
                 </div>
                 <div class="form-group checkbox-group">
-                    <input type="checkbox visually-hidden" id="user-privacy" name="user-privacy" required>
-                    <label for="user-privacy">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
+                    <input type="checkbox" id="user-privacy" name="user-privacy" class="visually-hidden" required>
+                    <label for="user-privacy">I accept the terms and conditions of the <a href="#">Privacy
+                            Policy</a></label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
             </form>
