--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <div class="form-group">
-                    <label class="modal-name" for="user-name">Name</label>
+                    <label class="modal-label" for="user-name">Name</label>
                     <div class="input-wrapper">
                         <input type="text" id="user-name" name="user-name" class="form-input" placeholder="Name"
                             required>
@@ -370,7 +370,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="modal-phone" for="phone">Phone</label>
+                    <label class="modal-label" for="phone">Phone</label>
                     <div class="input-wrapper">
                         <input type="tel" id="phone" name="phone" class="form-input" placeholder="Phone" required>
                         <svg class="icon" width="18" height="24">
@@ -379,7 +379,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="modal-mail" for="email">Email</label>
+                    <label class="modal-label" for="email">Email</label>
                     <div class="input-wrapper">
                         <input type="e-mail" id="e-mail" name="e-mail" class="form-input" placeholder="E-mail" required>
                         <svg class="icon" width="18" height="24">
@@ -388,7 +388,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="modal-user" for="user-comment">Comment</label>
+                    <label class="modal-label" for="user-comment">Comment</label>
                     <textarea id="user-comment" name="user-comment" class="textarea-input" placeholder="Text input"
                         required></textarea>
                 </div>
