--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     <input type="checkbox" value="true" id="user-privacy" class="visually-hidden" name="user-privacy" required>
                     <span class="checkbox-icon"></span>
                     <span class="label-text">I accept the terms and conditions of the <a href="#">Privacy Policy</a></span>
-                <label for="user-privacy">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
+                <label for="user-privacy" class="label-text"></label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
             </form>
