--- a/index.html
+++ b/index.html
@@ -387,19 +387,26 @@
                         </svg>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="modal-label" for="user-comment">Comment</label>
-                    <textarea id="user-comment" name="user-comment" class="textarea-input" placeholder="Text input"
-                        required></textarea>
-                </div>
-                <div class="form-group checkbox-group">
-                    <input type="checkbox" value="true" id="user-privacy" class="visually-hidden" name="user-privacy" required>
-                    <span class="checkbox-icon"></span>
-                    <span class="label-text">I accept the terms and conditions of the <a href="#">Privacy Policy</a></span>
-                <label for="user-privacy" class="label-text"></label>
-                </div>
-                <button type="submit" class="modal-submit-button">Send</button>
-            </form>
+                <form class="subscribe-form">
+                    <div class="form-group checkbox-group">
+                        <input type="checkbox" value="true" id="user-privacy" class="visually-hidden" name="user-privacy" required>
+                        <span class="checkbox-icon">
+                            <svg class="icon-vector" width="16" height="16">
+                                <use href="./images/icons.svg#icon-vector"></use>
+                            </svg>
+                        </span>
+                        <label for="user-privacy" class="label-text">
+                            I accept the terms and conditions of the <a href="#">Privacy Policy</a>
+                        </label>
+                    </div>
+                    <button type="submit" class="modal-submit-button">
+                        Subscribe
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+
         </div>
     </div>
 
