--- a/index.html
+++ b/index.html
@@ -394,14 +394,15 @@
                 </div>
                 <div class="form-group checkbox-group">
                     <input type="checkbox" value="true" id="user-privacy" class="visually-hidden" name="user-privacy" required>
-                    <span class="checkbox-icon"></span>
-                    <span class="label-text">I accept the terms and conditions of the <a href="#">Privacy Policy</a></span>
-                <label for="user-privacy" class="label-text"></label>
+                    <label for="user-privacy" class="label-text">
+                        <span class="checkbox-icon">
+                            <svg class="icon-vector" width="10" height="8">
+                                <use href="./images/icons.svg#icon-vector"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the <a href="#">Privacy Policy</a>
+                    </label>
                 </div>
-                <button type="submit" class="modal-submit-button">Send</button>
-            </form>
-        </div>
-    </div>
 
     <!-- JavaScript for Modal -->
    <script>
