--- a/index.html
+++ b/index.html
@@ -291,63 +291,61 @@
     </main>
 
     <footer class="footer section">
-    <div class="container">
-        <div class="footer-content">
-            <a href="./index.html" class="footer-logo">Web<span class="footer-logo-color">Studio</span></a>
-            <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
-        <div class="footer-social">
-            <p class="footer-social-text">Social media</p>
-            <ul class="social-icons-footer">
-                <li class="social-icon-item-footer">
-                    <a href="https://instagram.com" class="social-icon-footer">
-                        <svg class="icon-footer" width="24" height="24">
-                            <use href="./images/icons.svg#icon-instagram"></use>
+        <div class="container">
+            <div class="footer-content">
+                <a href="./index.html" class="footer-logo">Web<span class="footer-logo-color">Studio</span></a>
+                <p class="footer-description">Increase the flow of customers and sales for your business with digital
+                    marketing & growth solutions.</p>
+            </div>
+            <div class="footer-social">
+                <p class="footer-social-text">Social media</p>
+                <ul class="social-icons-footer">
+                    <li class="social-icon-item-footer">
+                        <a href="https://instagram.com" class="social-icon-footer">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-item-footer">
+                        <a href="https://twitter.com" class="social-icon-footer">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-item-footer">
+                        <a href="https://facebook.com" class="social-icon-footer">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-item-footer">
+                        <a href="https://linkedin.com" class="social-icon-footer">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-subscribe">
+                <p class="subscribe-title">Subscribe</p>
+                <form class="subscribe-form">
+                    <label class="subscribe-label">
+                        <input type="email" name="email" class="subscribe-input" placeholder="E-mail" required>
+                    </label>
+                    <button type="submit" class="subscribe-button">
+                        Subscribe
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
                         </svg>
-                    </a>
-                </li>
-                <li class="social-icon-item-footer">
-                    <a href="https://twitter.com" class="social-icon-footer">
-                        <svg class="icon-footer" width="24" height="24">
-                            <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="social-icon-item-footer">
-                    <a href="https://facebook.com" class="social-icon-footer">
-                        <svg class="icon-footer" width="24" height="24">
-                            <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="social-icon-item-footer">
-                    <a href="https://linkedin.com" class="social-icon-footer">
-                        <svg class="icon-footer" width="24" height="24">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+                    </button>
+                </form>
+            </div>
         </div>
-        <div class="footer-subscribe">
-            <p class="subscribe-title">Subscribe</p>
-            <form class="subscribe-form">
-                <label class="subscribe-label">
-                    <input type="email" name="email" class="subscribe-input" placeholder="E-mail" required>
-                </label>
-                <button type="submit" class="subscribe-button">
-                    Subscribe
-                    <svg class="subscribe-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-send"></use>
-                    </svg>
-                </button>
-            </form>
-        </div>
-        </div>
-        </footer>
-
-
-
+    </footer>
 
     <!-- Modal Structure -->
     <div class="backdrop">
@@ -393,19 +391,24 @@
                         required></textarea>
                 </div>
                 <div class="form-group checkbox-group">
-                    <input type="checkbox" value="true" id="user-privacy" class="visually-hidden" name="user-privacy" required>
+                    <input type="checkbox" value="true" id="user-privacy" class="visually-hidden" name="user-privacy"
+                        required>
+                    <span class="checkbox-icon">
+                        <svg class="icon-vector" width="10" height="8">
+                            <use href="./images/icons.svg#icon-vector"></use>
+                        </svg>
+                    </span>
                     <label for="user-privacy" class="label-text">
-                        <span class="checkbox-icon">
-                            <svg class="icon-vector" width="10" height="8">
-                                <use href="./images/icons.svg#icon-vector"></use>
-                            </svg>
-                        </span>
                         I accept the terms and conditions of the <a href="#">Privacy Policy</a>
                     </label>
                 </div>
+                <button type="submit" class="modal-submit-button">Send</button>
+            </form>
+        </div>
+    </div>
 
     <!-- JavaScript for Modal -->
-   <script>
+    <script>
         document.addEventListener('DOMContentLoaded', function () {
             const orderServiceButton = document.getElementById('order-service-button');
             const backdrop = document.querySelector('.backdrop');
@@ -427,4 +430,5 @@
         });
     </script>
 </body>
+
 </html>
