--- a/index.html
+++ b/index.html
@@ -360,8 +360,7 @@
                 <div class="form-group">
                     <label class="modal-label" for="user-name">Name</label>
                     <div class="input-wrapper">
-                        <input type="text" id="user-name" name="user-name" class="form-input" placeholder="Name"
-                            required>
+                        <input type="text" id="user-name" name="user-name" class="form-input" required>
                         <svg class="icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
@@ -370,7 +369,7 @@
                 <div class="form-group">
                     <label class="modal-label" for="phone">Phone</label>
                     <div class="input-wrapper">
-                        <input type="tel" id="phone" name="phone" class="form-input" placeholder="Phone" required>
+                        <input type="tel" id="phone" name="phone" class="form-input" required>
                         <svg class="icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
@@ -379,7 +378,7 @@
                 <div class="form-group">
                     <label class="modal-label" for="email">Email</label>
                     <div class="input-wrapper">
-                        <input type="email" id="email" name="email" class="form-input" placeholder="E-mail" required>
+                        <input type="email" id="email" name="email" class="form-input" required>
                         <svg class="icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
